[package]
name = "yaad"
version = "0.1.0"
authors = ["Urjit Singh Bhatia <urjitsb87@gmail.com>"]

[dependencies]
rand = "0.3"
uuid = {version="0.4", features=["v4"]}
statsd = "0.11.0"
config = "0.9.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
chrono = "0.4.6"
colored = "1.6"
bufstream = "0.1.4" 
log = "*"
env_logger = "*"
pretty_env_logger = "0.3"
tokio = "0.1.14"
tokio-io = "0.1"
futures = "0.1"
bytes = "0.4"

[replace]
"statsd:0.11.0" = { path = "../rust-statsd" }
